appId: com.suman.mangalya.development
---
- runFlow:
    file: subflows/open-development-app.yaml
- runFlow:
    file: subflows/create-workspace.yaml
- tapOn: "More"
- tapOn: "Open Settings"
- scrollUntilVisible:
    element:
      text: "Delete local data"
    direction: DOWN
    timeout: 30000
- tapOn: "Delete local data"
- tapOn: "Confirmation"
- inputText: "DELETE"
- hideKeyboard
- tapOn: "Delete data"
- assertVisible: "Mangalya introduction|Next"
